--- a/css/mobile.css
+++ b/css/mobile.css
@@ -23,6 +23,10 @@
     span.slider-nav__arrow.js-gallery-next.slick-arrow{
         top: 38.6rem;
     }
+    .cookie{
+        left: 60rem;
+    top: 41rem;
+    }
 }
 
 
