--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ a.adress-info {
 
 .dropbtn
 {
-    background: url('Griftrans/image/icon/md.svg') no-repeat left center;
+    background: url('https://serg-svy.github.io/Griftrans/image/icon/md.svg') no-repeat left center;
     padding-left: 25px;
     width: 40px;
     font-family: 'Jost';
